--- a/src/main/resources/assets/ben19_emmbdm/lang/en_us.json
+++ b/src/main/resources/assets/ben19_emmbdm/lang/en_us.json
@@ -2,8 +2,9 @@
   "item.ben19_emmbdm.enchantedcobblestone": "Enchanted Cobblestone",
   "item.ben19_emmbdm.enchanteddiamond": "Enchanted Diamond",
   "item.ben19_emmbdm.diamondspreading": "Diamond Spreading",
+  "item.ben19_emmbdm.mithril": "Mithril",
 
   "block.ben19_emmbdm.mithrilpure": "Pure Mithril Ore",
 
-  "itemgroup.enchanted": "Enchanted Items Group"
+  "itemgroup.enchanted": "EMMDM Items"
 }
